# Angel-Aura-Amethyst-iOS

./: .gitignore  CHANGES.md  Makefile  README.md  pr_body.md
.github/workflows/: development.yml  github-hosted-build.yml
JavaApp/: Makefile
JavaApp/libs/caciocavallo17/: cacio-shared-1.18-SNAPSHOT.jar.bak  cacio-tta-1.18-SNAPSHOT.jar.bak
JavaApp/src/launcher/com/apple/ios/audio/: IOSTargetDataLine.java
JavaApp/src/patchjna_agent/com/sun/jna/: Platform.java
Natives/: AudioLevelMeterView.h  AudioLevelMeterView.m  CMakeLists.txt  Info.plist  JavaGUIViewController.m  JavaLauncher.m  LauncherMenuViewController.m  LauncherNavigationController.m  LauncherPreferences.m  LauncherPreferencesViewController.m  MinecraftResourceDownloadTask.m  MobileGluesConfig.h  MobileGluesConfig.m  PLPrefTableViewController.h  PLPrefTableViewController.m  PLPreferences.m  PickTextField.m  SurfaceViewController.m  UIKit+hook.h  UIKit+hook.m  ZinkConfig.h  ZinkConfig.m  audio_capture_bridge.m  config.h.in  egl_bridge.m  input_bridge_v3.m  main.m  main_hook.m  utils.h  utils.m
Natives/build_dbg/: CMakeCache.txt  Makefile  cmake_install.cmake  libAFNetworking.dylib  libltw.dylib
Natives/build_dbg/AngelAuraAmethyst.app/: AngelAuraAmethyst
Natives/build_ltw/: CMakeCache.txt  Makefile  cmake_install.cmake  libltw.dylib
Natives/cmake/: ltw_sources.cmake
Natives/cmake/ltw_compat/: threads.h
Natives/ctxbridges/: gl_bridge.m  osm_bridge.m
Natives/resources/Frameworks/: liblwjgl_stb.dylib  libvulkan.1.dylib
Natives/resources/ar.lproj/: Localizable.strings
Natives/resources/cs.lproj/: Localizable.strings
Natives/resources/de.lproj/: Localizable.strings
Natives/resources/en.lproj/: Localizable.strings
Natives/resources/es.lproj/: Localizable.strings
Natives/resources/et.lproj/: Localizable.strings
Natives/resources/fa.lproj/: Localizable.strings
Natives/resources/fil.lproj/: Localizable.strings
Natives/resources/fr.lproj/: Localizable.strings
Natives/resources/id.lproj/: Localizable.strings
Natives/resources/it.lproj/: Localizable.strings
Natives/resources/ja.lproj/: Localizable.strings
Natives/resources/pl.lproj/: Localizable.strings
Natives/resources/pt-BR.lproj/: Localizable.strings
Natives/resources/ru.lproj/: Localizable.strings
Natives/resources/tr.lproj/: Localizable.strings
Natives/resources/uk.lproj/: Localizable.strings
Natives/resources/vi.lproj/: Localizable.strings
Natives/resources/zh-Hans.lproj/: Localizable.strings
Natives/resources/zh-Hant.lproj/: Localizable.strings
i9n/: BUILD_AND_ARCHITECTURE_GUIDE.md  MobileGlues_Settings_Reference.md
